# sfml-game0

./: CMakeLists.txt  README.txt
src/: main.cpp
src/Buffers/: Buffer.cpp  Buffer.h  EventableBuffer.cpp  EventableBuffer.h  RenderBuffer.h  UpdatableBuffer.cpp  UpdatableBuffer.h
src/Components/: Eventable.cpp  Eventable.h  Renderable.cpp  Renderable.h  Updatable.cpp  Updatable.h
src/Entities/: Entity.h  Player.cpp  Player.h
src/Global/: Configuration.cpp  Configuration.h
src/World/: Tile.h  World.cpp  World.h
